Fixed instagram and twitter spacings

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -264,13 +264,9 @@ color:#222222;
   letter-spacing: 20px;
   text-align: center;
   text-transform: uppercase;
-  float: right;
 }
 
 .instagram-feed{
-  float: left;
-  min-width: 30%;
-  max-width: 30%;
   font-family: 'Amatic SC', sans serif, arial;
   font-size: 500%;
   letter-spacing: 20px;
